modifying the draft

--- a/main.tex
+++ b/main.tex
@@ -28,12 +28,14 @@
 \input{problem}	
 
 \input{theory}
+%\input{planning}
 
 \input{experiments}
 
 \bibliographystyle{plain}
 \bibliography{references}
-
+\input{controllers}
+%\input{abcd}
 %\input{recycle_bin} 
 
 \end{document}
