--- a/references.bib
+++ b/references.bib
@@ -136,6 +136,29 @@
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
+@article{Kavraki1996rrt,
+	year = {1996},
+	publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+	volume = {12},
+	number = {4},
+	pages = {566--580},
+	author = {L.E. Kavraki and P. Svestka and J.-C. Latombe and M.H. Overmars},
+	title = {Probabilistic roadmaps for path planning in high-dimensional configuration spaces},
+	journal = {{IEEE} Transactions on Robotics and Automation}
+}
+@inproceedings{KhaledZ19pfaces,
+	author    = {Mahmoud Khaled and
+	Majid Zamani},
+	title     = {pFaces: an acceleration ecosystem for symbolic control},
+	booktitle = {Proceedings of the 22nd {ACM} International Conference on Hybrid Systems:
+	Computation and Control, {HSCC} 2019, Montreal, QC, Canada, April
+	16-18, 2019},
+	pages     = {252--257},
+	publisher = {{ACM}},
+	year      = {2019}
+}
+
+
 @article{reissig2016feedback,
   title={Feedback refinement relations for the synthesis of symbolic controllers},
   author={Reissig, Gunther and Weber, Alexander and Rungger, Matthias},
@@ -145,6 +168,18 @@
   pages={1781--1796},
   year={2016},
   publisher={IEEE}
+}
+
+@inproceedings{Rungger2016scots,
+	author    = {Matthias Rungger and
+	Majid Zamani},
+	title     = {{SCOTS:} {A} Tool for the Synthesis of Symbolic Controllers},
+	booktitle = {Proceedings of the 19th International Conference on Hybrid Systems:
+	Computation and Control, {HSCC} 2016, Vienna, Austria, April 12-14,
+	2016},
+	pages     = {99--104},
+	publisher = {{ACM}},
+	year      = {2016}
 }
 
 @INPROCEEDINGS{Shahin2017cltl,
