--- a/experiments.tex
+++ b/experiments.tex
@@ -10,36 +10,37 @@ The formal controller synthesis has been performed
 on a cluster with 4 Intel Xeon E7-8857 v2 CPUs (48 cores in total) at 3GHz, with 1.5TB of
 RAM. %\MS{TODO: adding a table with complete information regarding sizes and times for all of the examples}
 
-We consider two distinct types of problems, and demonstrate how they can be solved using our approach. Table~\ref{tab:runtimes} demonstrates the runtimes of different stages for each of the experiment. The reported numbers for local synthesis correspond the maximum runtime among all of the robots for each experiment.%Note that while reported numbers for local controller synthesis correspond to the total runtimes over all of the robots, significant reduction would be expected if abstraction and synthesis phases were parallelized.
+We consider two distinct types of problems, and demonstrate how they can be solved using our approach. Table~\ref{tab:runtimes} demonstrates the runtimes of different stages for each of the experiment. The reported numbers for local synthesis correspond the maximum runtime among all of the robots for each experiment. Note that using global ABCD, memory requirement exceeds our system's limit (1.5TB of RAM) for all of the experiments.
+%Note that while reported numbers for local controller synthesis correspond to the total runtimes over all of the robots, significant reduction would be expected if abstraction and synthesis phases were parallelized.
 
 \begin{table*}
 	\centering
 	\caption{List of runtimes for different case-studies
-		\textmd{Runtimes (in seconds) for computing the nominal controllers over the corresponding product spaces using ALTRO ($T_{AL}$), abstraction and synthesis times for synthesizing local controllers using SCOTS ($T_{SC}^{abs}$ and $T_{SC}^{syn}$, respectively).}
+		\textmd{Runtimes (in seconds) for computing the nominal controllers over the corresponding product spaces using ALTRO ($T_{AL}$), abstraction and synthesis times for computing local controllers using SCOTS ($T_{l}^{abs}$ and $T_{l}^{syn}$, respectively), abstraction and synthesis times for computing a global controller for the product system using SCOTS ($T_{g}^{abs}$ and $T_{g}^{syn}$, respectively)}
 	}
 	\label{tab:runtimes}
 	\renewcommand{\arraystretch}{1.2}
 	\setlength{\tabcolsep}{0.7em} % for the horizontal padding
 	\resizebox{1\columnwidth}{!}{
-		\begin{tabular}{l|c|rr}
+		\begin{tabular}{l|c|cc|cc}
 			\toprule
-			Case-studies&\multicolumn{1}{c}{Central synthesis}&
-			\multicolumn{2}{|c}{Local synthesis}\\
+			Case-studies&\multicolumn{1}{c}{Global planning}&
+			\multicolumn{2}{|c}{Local ABCD}&\multicolumn{2}{|c}{Global ABCD}\\
 			
-			&$T_{AL}$&$T_{SC}^{abs}$&$T_{SC}^{syn}$\\
+			&$T_{AL}$&$T_{l}^{abs}$&$T_{l}^{syn}$&$T_g^{abs}$&$T_g^{syn}$\\
 			\midrule
 			
-			\multirow{1}{*}{\rotatebox{0}{Multi-drone path planning}} & $125$ & $91.0$  & $9.22$ \\
-			
-			\midrule
-			
-			\multirow{1}{*}{\rotatebox{0}{Crane and forklift}} & $0.65$ & $511$  & $91$\\
+			\multirow{1}{*}{\rotatebox{0}{Multi-drone path planning}} & $125$ & $91.0$  & $9.22$&OM&OM \\
 			
 			\midrule
 			
-			\multirow{1}{*}{\rotatebox{0}{Lane merging}} & $100$ & $45.37$  & $8.63$\\
+			\multirow{1}{*}{\rotatebox{0}{Crane and forklift}} & $0.65$ & $511$  & $91$&OM&OM\\
+			
 			\midrule
-			\multirow{1}{*}{\rotatebox{0}{Multi-drone formation control}} & $163$ & $128.41$  & $34.14$\\
+			
+			\multirow{1}{*}{\rotatebox{0}{Lane merging}} & $100$ & $45.37$  & $8.63$&OM&OM\\
+			\midrule
+			\multirow{1}{*}{\rotatebox{0}{Multi-drone formation control}} & $163$ & $128.41$  & $34.14$&OM&OM\\
 			\bottomrule
 	\end{tabular}}
 \end{table*}
@@ -51,20 +52,20 @@ We consider two distinct types of problems, and demonstrate how they can be solv
 We first consider situations when the robots have got their individual reachability specifications, and they need to ensure a minimum safe distance from each other and the obstacles.
 We show how this case can be captured using the problem description outlined in Sec.~\ref{sec:problem}.
 
-Suppose $\set{\Sigma^i=(X^i,x_\init^i,U^i,W^i,f^i,Y,h^i)}$ is a set of control systems, $\tau>$ is the given sampling time, $\goal^i\subseteq X^i$ is the individual goal states, $\avoid\subseteq Y$ is a common obstacle in the output space, and $\delta \in \mathbb{R}^p_{>0}$ is a safety margin.
-(We could also consider obstacles in the robots' own state spaces, in which case we had to additionally introduce safety margins in the state spaces.)
+Suppose $\set{\Sigma^i=(X^i,x_\init^i,U^i,W^i,f^i)}$ is a set of control systems, $\tau>$ is the given sampling time, $\goal^i\subseteq X^i$ is the individual goal states and $\delta \in \mathbb{R}^p_{>0}$ is a safety margin.
+%(We could also consider obstacles in the agent' own state spaces, in which case we had to additionally introduce safety margins in the state spaces.)
 Suppose the specification requires that each robot $\Sigma^i$ eventually reaches $\goal^i$ while avoiding $\avoid$ and collision with robots by the margin $\delta$.
 This specification can be expressed as a reach-avoid specification of the product system $\Sigma^\times$, as per the required form given in Sec.~\ref{sec:problem}, as follows:
 \begin{itemize}
 	\item The goal set $\goal\subseteq X$ is defined as $\goal \coloneqq \goal^1\times \ldots \times \goal^N \subseteq X$, and
 	\item The static obstacle $\obs\subseteq X$ is defined as 
 		\begin{align}
-			&\obs \coloneqq\\ 
-				&\Set{ x\in X | 
+			&\obs \coloneqq\nonumber\\ 
+				&\Set{ x\in X^\times | 
 					\begin{array}{c}
-						\exists i\in [1;N]\;.\; d^{p}(h^i(\proj^i(x)),\obs) \leq \delta\\
-						\wedge\\
-						 \exists (i,j)\in [1;N]\times [1;N]\;.\;\\ d^{p}\left(h^i(\proj^i(x)),h^j(\proj^j(x))\right)\leq\delta
+						\exists i\in [1;N]\;.\; D(x,\avoid) \leq \delta\\
+						\vee\\
+						 \exists (i,j)\in [1;N]\times [1;N]\;.\;\\ D\left(\proj^i(x),\proj^j(x)\right)\leq\delta
 					\end{array}}.
 		\end{align}
 \end{itemize}
@@ -78,7 +79,7 @@ In this example, we consider a planning scenario for ten identical drones ($N=10
 The threshold for minimum distance from the static obstacle and other drones is chosen to be $\delta=\begin{bmatrix}0.28&0.28\end{bmatrix}^T$. %and $\delta_{obs}=\begin{bmatrix}2&2\end{bmatrix}^T$.
 The control objective is to synthesize a controller for each drone so that in the presence of additive bounded disturbance, beginning from the specified initial state, the corresponding target state is reached within a finite horizon, while avoiding collision with other drones and the static obstacle at every time point. 
 
-Every drone is modeled as tuple $\Sigma^i=(X,U,x_\init^i,W,f^d,Y,h^d)$. %The set of state variables $X$ consists of $x_1$, $x_2$ and $x_3$ which denote position in $2D$ plane and movement angle, respectively. The set of input variables includes $u_1$ and $u_2$ which represent linear and angular speeds of each robot. 
+Every drone is modeled as tuple $\Sigma^i=(X,U,x_\init^i,W,f^d)$. %The set of state variables $X$ consists of $x_1$, $x_2$ and $x_3$ which denote position in $2D$ plane and movement angle, respectively. The set of input variables includes $u_1$ and $u_2$ which represent linear and angular speeds of each robot. 
 Dynamics for each drone takes the form
 \begin{equation*}\label{eq:unicycle_ss}
 	f^{d}(x(t),u(t))=
@@ -93,12 +94,12 @@ Dynamics for each drone takes the form
 		u_2
 	\end{bmatrix},
 \end{equation*}
-where $x_1$, $x_2$ denote the drone's position in $2D$ plane, $x_3$ denotes the rotational angle, $u_1$ and $u_2$ represent linear and angular speeds of each drone, respectively. Further, the output mapping is defined as
-\[
-h^d(x(t))=\begin{bmatrix}
-	x_1\\x_2
-\end{bmatrix}.
-\]
+where $x_1$, $x_2$ denote the drone's position in $2D$ plane, $x_3$ denotes the rotational angle, $u_1$ and $u_2$ represent linear and angular speeds of each drone, respectively. %Further, the output mapping is defined as
+%\[
+%h^d(x(t))=\begin{bmatrix}
+%	x_1\\x_2
+%\end{bmatrix}.
+%\]
 %In the above equation, $u_1(t)$ and $u_2(t)$ denote linear and angular speeds at time $t$, respectively. Further, $x_1(t)$, $x_2(t)$ specify position in $x-y$ plane and $x_3$ denotes the angle at time $t$. 
 
 
@@ -114,10 +115,9 @@ in $125$ seconds for the product space with $30$ state and $20$ input variables.
  
  We want to robustify the nominal controller against disturbances with $|W|\leq \begin{bmatrix}0&0.025&0.025\end{bmatrix}^T$. We consider state and input spaces to be $X=[-1,11]^2\times[-2,3.3]$ and
 $U=[-2.4,2.4]^2$, respectively. Choosing state and input partition sizes $\eta_{X}=\begin{bmatrix}0.02&0.02&0.02\end{bmatrix}^T$ and
-$\eta_{U}=\begin{bmatrix}0.3&0.3\end{bmatrix}^T$ results in $\hat X$ and $\hat U$ with $9.61\times 10^7$ and $289$ points. As we explained in Sec.~\ref{sec:local_abcd}, we compute the transition system over the inter-tube space characterized by $\varepsilon=\begin{bmatrix}0.16&0.16&0.18\end{bmatrix}^T$, which results in finite-state transition system with $|\hat P|=4.0\times 10^5$ points. Given the above settings, SCOTS computes abstraction in $910$ seconds ($91.0$ seconds in average) and synthesis in $92.2$ seconds ($9.22$ seconds in average).
+$\eta_{U}=\begin{bmatrix}0.3&0.3\end{bmatrix}^T$ results in $\hat X$ and $\hat U$ with $9.61\times 10^7$ and $289$ points. We compute the transition system over the inter-tube space characterized by $\varepsilon=\begin{bmatrix}0.16&0.16&0.18\end{bmatrix}^T$, which results in finite-state transition system with $|\hat P|=4.0\times 10^5$ points. Given the above settings, SCOTS computes abstraction in $910$ seconds ($91.0$ seconds in average) and synthesis in $92.2$ seconds ($9.22$ seconds in average). Figure~\ref{fig:3dtubes} gives time-space illustration for the safe tubes around the nominal trajectories for three of the drones (the ones with red dashed circles around them in Fig~\ref{fig:MA}). Fig~\ref{fig:blowup} illustrates the fact that increasing number of agents ($N$) causes an exponential blow-up in the number of transitions if we wanted to solve the given reach-avoid problem over the product state and input spaces. However, since we compute tracking controllers locally, our method experiences linear blow-up when $N$ increases.
 
-By allowing disturbance to take non-zero values, there is no guarantee that the open-loop trajectory is followed and minimum distances are kept above the design thresholds. Fig.~\ref{fig:multi_drone_distance} illustrates performance of open-loop and feedback controllers on regulating distance between the first and second drones %($d^{p}(h^1(\proj^1(x_{nom})),h^2(\proj^2(x_{nom})))$)
-with and without disturbance. As expected, in the absence of disturbance open-loop controller suffices and distance between the two drones (shown in solid blue) does not go below the threshold line $\delta=0.28$. Next, we consider the case when constant additive disturbance vectors $\begin{bmatrix}0 &0.025&0.025\end{bmatrix}^T$ and $\begin{bmatrix}0 &-0.025&-0.025\end{bmatrix}^T$ are being applied to the first and second drones throughout the whole horizon. It can be noticed that applying the open-loop controller causes that distance between the two drones (shown in solid red) becomes smaller than $\delta$. However, the feedback controller is still capable of maintaining distance above the given threshold (shown in solid green).
+By allowing disturbance to take non-zero values, there is no guarantee that the open-loop trajectory is followed and minimum distances are kept above the design thresholds. Fig.~\ref{fig:multi_drone_distance} illustrates performance of open-loop and feedback controllers on regulating distance between the first and second drones with and without disturbance. As expected, in the absence of disturbance open-loop controller suffices and distance between the two drones (shown in solid blue) does not go below the threshold line $\delta=0.28$. Next, we consider the case when constant additive disturbance vectors $\begin{bmatrix}0 &0.025&0.025\end{bmatrix}^T$ and $\begin{bmatrix}0 &-0.025&-0.025\end{bmatrix}^T$ are being applied to the first and second drones throughout the whole horizon. It can be noticed that applying the open-loop controller causes that distance between the two drones (shown in solid green) becomes smaller than $\delta$. However, the feedback controller is still capable of maintaining distance above the given threshold (shown in solid red).
 \begin{figure}[t]
 	\centering
 	\includegraphics[width=0.45\textwidth]{figures/MA1.pdf}
@@ -126,8 +126,14 @@ with and without disturbance. As expected, in the absence of disturbance open-lo
 
 \begin{figure}[t]
 	\centering
+	\includegraphics[width=0.45\textwidth]{figures/tubes.eps}
+	\caption{Illustration of tubes enclosing nominal trajectories for three of the drones in time-state space}
+\end{figure}\label{fig:3dtubes}
+
+\begin{figure}[t]
+	\centering
 	\includegraphics[width=0.45\textwidth]{figures/dist.pdf}
-	\caption{Performance of open-loop and feedback controllers in regulating distance between drones for disturbance-free and perturbed situations}
+	\caption{Performance of open-loop and feedback controllers in regulating distance between drones for disturbance-free and perturbed situations for the multi-drone path planning example}
 \end{figure}\label{fig:multi_drone_distance}
 
 
@@ -171,11 +177,10 @@ with and without disturbance. As expected, in the absence of disturbance open-lo
 %	\caption{}
 %\end{figure}
 %\textcolor{red}{
-\subsubsection{Crane and Forklift}
+\subsubsection{Crane and Vehicle}
 \label{subsec}
-The goal of this example is to study performance of our method for controlling a number of robots with different dynamics. Consider a production line wherein a crane (modeled as a cart-pole system) puts some items at certain points and a forklift is in charge of picking these items up. It is assumed that at its lowest height the crane's hook is positioned such that the forklift cannot pass. In particular, Fig.~\ref{fig:cr_and_lft_2} shows a scenario wherein the crane (initially positioned toward left of the boom) needs to unload at the other end of the boom. At the same time, the forklift (initially positioned near the right end of the boom) needs to pick some item locating near the left end of the boom. The goal is to control both the crane and the forklift so that the forklift reaches the object without colliding with the crane. 
-
-We model the crane and forklift by tuples $\Sigma^1=(X^1,U^1,x_\init^1,W^1,f^c,Y^1,h^c)$ and $\Sigma^2=(X^2,U^2,x_\init^2,W^2,f^l,Y^2,h^l)$, respectively. The crane is modeled as cart-pole system with the dynamical model taken from \cite{Barto1983}:
+The goal of this example is to study performance of our method for controlling a number of robots with different dynamics. %Consider a production line wherein a crane (modeled as a cart-pole system) puts some items at certain points and a forklift is in charge of picking these items up. It is assumed that at its lowest height the crane's hook is positioned such that the forklift cannot pass. In particular, Fig.~\ref{fig:cr_and_lft_2} shows a scenario wherein the crane (initially positioned toward left of the boom) needs to unload at the other end of the boom. At the same time, the forklift (initially positioned near the right end of the boom) needs to pick some item locating near the left end of the boom. The goal is to control both the crane and the forklift so that the forklift reaches the object without colliding with the crane. 
+We model the crane and vehicle by tuples $\Sigma^1=(X^1,U^1,x_\init^1,W^1,f^c)$ and $\Sigma^2=(X^2,U^2,x_\init^2,W^2,f^l)$, respectively. The crane is modeled as cart-pole system with the dynamical model taken from \cite{Barto1983}:
 \begin{align*}
 	\ddot{\theta} &= \frac{M_tg\sin(\theta) - \cos(\theta)(F + M_pl \dot{\theta}^2 \sin(\theta))}{l(4/3 M_t- M_p \cos^2(\theta))}=f^c_1(\theta,\dot{\theta},F)\\
 	\ddot{z}&= \frac{F + M_pl \dot{\theta}^2 \sin(\theta)-M_pl \ddot{\theta} \cos(\theta)}{M_t}=f^c_2(\theta,\dot{\theta},F),
@@ -212,40 +217,40 @@ Further, cart's position, pole's angle and input force to the cart are denoted b
 %	f^c_2(x{(1)},u^{(1)})=\frac{g\;\sin(x_3^{(1)})}{}
 %\end{align}
 %\MS{what are $f^c_1$ and $f^c_2$?}
-The output mapping for the crane is defined as
-\[
-h^c(x^{(1)}(t))=\begin{bmatrix}
-	x_1^{(1)}+l \sin(x_3^{(1)})\\
-	y_1+l \cos(x_3^{(1)})
-\end{bmatrix},
-\]
-where, $y_1>0$ is a constant that denotes the cart's height from the ground.
-The forklift's dynamics takes the form
+%The output mapping for the crane is defined as
+%\[
+%h^c(x^{(1)}(t))=\begin{bmatrix}
+%	x_1^{(1)}+l \sin(x_3^{(1)})\\
+%	y_1+l \cos(x_3^{(1)})
+%\end{bmatrix},
+%\]
+%where, $y_1>0$ is a constant that denotes the cart's height from the ground.
+The vehicle's dynamics takes the form
 \[f^{l}(x^{(2)}(t),u^{(2)}(t))=\begin{bmatrix}
 \dot{x}_1^{(2)}\\ \dot{x}^{(2)}_2 \end{bmatrix}=\begin{bmatrix} x^{(2)}_2\\ u^{(2)} \end{bmatrix},
 \]
-where $x_1^{(2)}$ and $x_2^{(2)}$ denote the forklift's position and speed and $u^{(2)}$ represents the forklift's control input (acceleration). The output mapping for the crane is defined as
-\[
-h^l=\begin{bmatrix}
-	x_1^{(2)}\\
-	y_2
-\end{bmatrix},
-\]
-where, $y_2>0$ is a constant that denotes the height of the forklift's head with respect to the ground.
+where $x_1^{(2)}$ and $x_2^{(2)}$ denote the vehicle's position and speed and $u^{(2)}$ represents the vehicle's control input (acceleration). %The output mapping for the crane is defined as
+%\[
+%h^l=\begin{bmatrix}
+%	x_1^{(2)}\\
+%	y_2
+%\end{bmatrix},
+%\]
+%where, $y_2>0$ is a constant that denotes the height of the forklift's head with respect to the ground.
 
 %As promised, we use ALTRO in the first step to generate a valid trajectory for the case that $W=\{0\}$. 
-There is no static obstacle defined for this example and for minimum distance between the crane and the forklift we choose $\delta=\begin{bmatrix}0.035&0.2\end{bmatrix}^T$. The sampling time and the horizon length are fixed to $\tau=0.1$ and $T=70$, respectively. Given these settings, ALTRO was capable of generating a valid nominal trajectory in $0.65$ seconds. Fig.~\ref{fig:cr_and_lft_2} (\textbf{left}) demonstrates snapshots of the produced trajectory. Surprisingly enough, applying (constant) additive disturbance $W=\begin{bmatrix}0&0.05&0&0\end{bmatrix}^T$ (to the cart-pole system) causes collision between the crane and forklift before the end of the mission (Fig.~\ref{fig:cr_and_lft_2} (\textbf{right})).
+There is no static obstacle defined for this example and for minimum distance between the crane and the vehicle we choose $\delta=\begin{bmatrix}0.035&0.2\end{bmatrix}^T$. The sampling time and the horizon length are fixed to $\tau=0.1$ and $T=70$, respectively. Given these settings, ALTRO was capable of generating a valid nominal trajectory in $0.65$ seconds. Fig.~\ref{fig:cr_and_lft_2} (\textbf{left}) demonstrates snapshots of the produced trajectory. Surprisingly enough, applying (constant) additive disturbance $W=\begin{bmatrix}0&0.05&0&0\end{bmatrix}^T$ (to the cart-pole system) causes collision between the crane and vehicle before the end of the mission (Fig.~\ref{fig:cr_and_lft_2} (\textbf{right})).
 
-In the next step, we use SCOTS in order to compute a feedback controller tolerating additive disturbance $|W^1|\leq\begin{bmatrix}0&0.05&0&0\end{bmatrix}^T$ for the crane and $|W^2|\leq\begin{bmatrix}0&0.1\end{bmatrix}^T$ for the forklift. %We note that the selection of tube sizes need to satisfy the following inequality:
+In the next step, we use SCOTS in order to compute a feedback controller tolerating additive disturbance $|W^1|\leq\begin{bmatrix}0&0.05&0&0\end{bmatrix}^T$ for the crane and $|W^2|\leq\begin{bmatrix}0&0.1\end{bmatrix}^T$ for the vehicle. %We note that the selection of tube sizes need to satisfy the following inequality:
 %\[ \delta_{col}> \varepsilon_{1}^{(1)} + l\times\varepsilon_{3}^{(1)} + \varepsilon_{1}^{(2)},\]
 %where $\varepsilon_{1}^{(1)}$, $\varepsilon_{3}^{(1)}$ denote tube sizes over $x_1^{(1)}$ and $x_3^{(1)}$, $l$ denotes the length of the rope between the cart and the hook and $\varepsilon_{1}^{(2)}$ denotes the tube size over $x_1^{(2)}$. 
-We choose state and input spaces for the crane to be $X^{1}=[-0.195,5.49]\times[-1.99,4.37]\times[1.20,4.68]\times[-5.44,5.28]$ and $U^{1}=[-7,7]$, respectively. For the forklift, we set $X^{2}=[-3,3]\times[2,9]$ and $U^{2}=[-3,3]$. %Next, we augment both dynamics with time and 
-Next, we choose state and input partition sizes $\eta_{{X}}^{1}=\begin{bmatrix}0.015&0.035&0.016&0.064\end{bmatrix}^T$, $\eta_{U}^1=0.2$,  $\eta_{{X}}^2=\begin{bmatrix}0.015&0.03\end{bmatrix}^T$ and $\eta_{U}^2=0.1$. These selections yield discretized models with $|\hat X^{(1)}|=2.5\times 10^9$, $|\hat U^{(1)}|=71$, $|\hat X^{(2)}|=2\times 10^5$ and $|\hat U^{(2)}|=61$ points for the the crane and forklift, respectively. Next, we limit both of the state spaces into tubes constructed around the open-loop trajectories with sizes specified as $\varepsilon^{1}=\begin{bmatrix}0.135&0.385&0.176 &0.768\end{bmatrix}^T$ and $\varepsilon^{2}=\begin{bmatrix}0.08&0.12\end{bmatrix}$. This reduces size of state spaces into $|\hat P^{1}|=1.2\times 10^7$ and $|\hat P^{2}|=1.5\times 10^4$. Given the above settings, SCOTS was able to compute abstraction in $511$ and $0.22$ seconds for the crane and the forklift, respectively. Scots performs synthesis in $91$ and $0.037$ seconds for the crane and the forklift, respectively.
+We choose state and input spaces for the crane to be $X^{1}=[-0.195,5.49]\times[-1.99,4.37]\times[1.20,4.68]\times[-5.44,5.28]$ and $U^{1}=[-7,7]$, respectively. For the vehicle, we set $X^{2}=[-3,3]\times[2,9]$ and $U^{2}=[-3,3]$. %Next, we augment both dynamics with time and 
+Next, we choose state and input partition sizes $\eta_{{X}}^{1}=\begin{bmatrix}0.015&0.035&0.016&0.064\end{bmatrix}^T$, $\eta_{U}^1=0.2$,  $\eta_{{X}}^2=\begin{bmatrix}0.015&0.03\end{bmatrix}^T$ and $\eta_{U}^2=0.1$. These selections yield discretized models with $|\hat X^{(1)}|=2.5\times 10^9$, $|\hat U^{(1)}|=71$, $|\hat X^{(2)}|=2\times 10^5$ and $|\hat U^{(2)}|=61$ points for the the crane and vehicle, respectively. Next, we limit both of the state spaces into tubes constructed around the open-loop trajectories with sizes specified as $\varepsilon^{1}=\begin{bmatrix}0.135&0.385&0.176 &0.768\end{bmatrix}^T$ and $\varepsilon^{2}=\begin{bmatrix}0.08&0.12\end{bmatrix}$. This reduces size of state spaces into $|\hat P^{1}|=1.2\times 10^7$ and $|\hat P^{2}|=1.5\times 10^4$. Given the above settings, SCOTS was able to compute abstraction in $511$ and $0.22$ seconds for the crane and the vehicle, respectively. Scots performs synthesis in $91$ and $0.037$ seconds for the crane and the vehicle, respectively.
 			
 \begin{figure}[t]
 	\centering
 	\includegraphics[width=0.45\textwidth]{figures/crane_and_forklifter.pdf}
-	\caption{Illustration of the trajectories generated by the open-loop controller for the crane and forklift example under disturbance-free (\textbf{left}) and perturbed (\textbf{right}) situations} 
+	\caption{Illustration of the trajectories generated by the open-loop controller for the crane and vehicle example under disturbance-free (\textbf{left}) and perturbed (\textbf{right}) situations} 
 \end{figure}\label{fig:cr_and_lft_2}
 
 
@@ -301,7 +306,8 @@ Finally, we study a lane merging problem wherein multiple controlled vehicles ar
 %\[
 %h^v(x(t))=x(t).
 %\]
-The model for each of the vehicles is the same as the drone model given in Section~\ref{sec:local reach-avoid} ($\Sigma^i=(X,x_\init^i,U,W,f^d,Y,h^d)$). For collision and obstacle avoidance, we choose $\delta=\begin{bmatrix}0.37&0.37\end{bmatrix}^T$. The sampling time and the horizon length are fixed to $\tau=0.1$ and $T=110$, respectively. Given these settings, ALTRO generates a valid nominal trajectory in $100$ seconds. Fig.~\ref{fig:merge} demonstrates snapshots of the produced trajectory. Next, we use SCOTS in order to compute a feedback controller tolerating additive disturbance $|W|\leq\begin{bmatrix}0.03&0.03&0.03\end{bmatrix}^T$. We choose state and input spaces for each vehicle's model to be $X=[-0.5,15]\times[0.1,7.4]\times[-1,0.4]$ and $U=[-0.9,3]\times[-2.1,2.1]$, respectively. State and input partition sizes are chosen as $\eta_{X}=\begin{bmatrix}0.02&0.02&0.02\end{bmatrix}^T$, $\eta_{U}=\begin{bmatrix}0.3&0.15\end{bmatrix}^T$. These selections yield discretized models with $|\hat X|=2.1\times 10^7$, $|\hat U|=406$ points. Next, we limit the state spaces into tubes constructed around the open-loop trajectories with sizes specified as $\varepsilon=\begin{bmatrix}0.16&0.16&0.32\end{bmatrix}^T$. This reduces size of state space into $|\hat P|=1.9\times 10^5$ (in average). Given the above settings, SCOTS was able to compute abstraction in $195$ seconds ($32.5$ seconds in average) and synthesize controllers in $38.5$ seconds ($6.4$ seconds in average).
+The model for each of the vehicles is the same as the drone model given in Section~\ref{sec:local reach-avoid} ($\Sigma^i=(X,x_\init^i,U,W,f^d)$). For collision and obstacle avoidance, we choose $\delta=\begin{bmatrix}0.37&0.37\end{bmatrix}^T$. The sampling time and the horizon length are fixed to $\tau=0.1$ and $T=110$, respectively. Given these settings, ALTRO generates a valid nominal trajectory in $100$ seconds. Next, we use SCOTS in order to compute a feedback controller tolerating additive disturbance $|W|\leq\begin{bmatrix}0.03&0.03&0.03\end{bmatrix}^T$. We choose state and input spaces for each vehicle's model to be $X=[-0.5,15]\times[0.1,7.4]\times[-1,0.4]$ and $U=[-0.9,3]\times[-2.1,2.1]$, respectively. State and input partition sizes are chosen as $\eta_{X}=\begin{bmatrix}0.02&0.02&0.02\end{bmatrix}^T$, $\eta_{U}=\begin{bmatrix}0.3&0.15\end{bmatrix}^T$. These selections yield discretized models with $|\hat X|=2.1\times 10^7$, $|\hat U|=406$ points. Next, we limit the state spaces into tubes constructed around the open-loop trajectories with sizes specified as $\varepsilon=\begin{bmatrix}0.16&0.16&0.32\end{bmatrix}^T$. This reduces size of state space into $|\hat P|=1.9\times 10^5$ (in average). Given the above settings, SCOTS was able to compute abstraction in $195$ seconds ($32.5$ seconds in average) and synthesize controllers in $38.5$ seconds ($6.4$ seconds in average). Fig.~\ref{fig:merge} demonstrates snapshots of one sample trajectory when feedback controllers are employed under the presence of disturbance. Fig.~\ref{fig:multi_drone_distance} illustrates performance of open-loop and feedback controllers on regulating distance between of the vehicles from the road's sides with and without disturbance. In the absence of disturbance open-loop controller is capable of maintaing a minimum distance from the road's sides. Next, we consider the case when constant additive disturbance vector $\begin{bmatrix}-0.03 &0.03&-0.03\end{bmatrix}^T$ is being applied to the vehicle throughout the whole horizon. It can be noticed that applying the open-loop controller causes that distance from the road's side (shown in solid red) becomes smaller than $\delta$. However, the feedback controller is still capable of maintaining distance above the given threshold (shown in solid green).
+
 
 
 
@@ -312,11 +318,18 @@ The model for each of the vehicles is the same as the drone model given in Secti
 %The problem that we are solving has several differences with the example on the paper. they optimize time and fuel for each car and tehy consider several constraints for speed and positions. they also consider 2d linear model for each car. Here we only try to solve the reachability problem. we consider reach top speed limitation and angle acceleration and lanesborders As constraints. For each car we consider the model represented in eq[6] (same model as multi-car example) which has more dimension and is nonlinear.
 
 
+
 \begin{figure}
 	\caption{Illustration of a (sample) robustified trajectory for the lane merging example}
 	\centering
-	\includegraphics[width=0.45\textwidth,height=0.5\textheight]{figures/merge2.png}
+	\includegraphics[width=0.45\textwidth,height=0.4\textheight]{figures/merge.pdf}
 \end{figure}\label{fig:merge}
+
+\begin{figure}[t]
+	\centering
+	\includegraphics[width=0.45\textwidth]{figures/dist_merging.pdf}
+	\caption{Performance of open-loop and feedback controllers in regulating distance between drones for disturbance-free and perturbed situations for the lane merging example}
+\end{figure}\label{fig:merging_distance}
 
 
 \subsection{Global formation control problem}\label{sec:global formation control}
@@ -325,32 +338,32 @@ The second category of example, that we are about to present, is about maintaini
 We show how the formation control problem can be expressed using a static obstacle $\avoid$ on the product state space $X^\times$, as required by the problem setup in Sec.~\ref{sec:problem}.
 
 Let us first formalize the notion of formation.
-Let $\Set{\Sigma^i=(X^i,x_\init^i,U^i,W^i,f^i,Y,h^i)}$ be a set of robots.
+Let $\Set{\Sigma^i=(X^i,x_\init^i,U^i,W^i,f^i)}$ be a set of robots.
 A \emph{formation constraint} is a set $\Set{\lambda^{i,j}\in \mathbb{R}^p}_{i,j\in [1;N]}$ where every $\lambda^{i,j}$ specifies the relative \emph{euclidean} distance between the output of robot $\Sigma^i$ and the output of robot $\Sigma^j$.
 (We use euclidean distance to define formation, as opposed to element-wise distance in the rest of the paper, to allow rotation of the formation while moving.)
 
-Now suppose $\goal^i\subseteq X^i$ is the individual goal states, $\avoid\subseteq Y$ is a common obstacle in the output space, $\delta \in \mathbb{R}^p_{>0}$ is a safety margin, and $\mu\in \mathbb{R}^p_{>0}$ is a tolerance margin for the formation constraint.
+Now suppose $\goal^i\subseteq X^i$ is the individual goal states, $\avoid\subseteq X^\times$ is a common obstacle in the output space, $\delta \in \mathbb{R}^p_{>0}$ is a safety margin, and $\mu\in \mathbb{R}^p_{>0}$ is a tolerance margin for the formation constraint.
 The formation control problem then asks to generate controllers $\set{C_i}$ such that every robot $\Sigma^i$ eventually reaches $\goal^i$ while avoiding $\avoid$ by the margin $\delta$, as well as while making sure that the \emph{euclidean} distance between robot $\Sigma^i$ and $\Sigma^j$ is in the range $\lambda^{i,j} \pm \mu$.
 Essentially the tolerance margin $\mu$ is to account for the possible slight deviations due to disturbances experienced by the robots; in other words, $\mu$ will dictate the choice of $\varepsilon$ in Step~\ref{step:abcd} of Alg.~\ref{alg:main}.
 Notice that since the robots have their own goals, and at the same time they need to ``stay close'' to their neighboring robots in the formation for the entire period, hence they might first need to accompany the other robots to their goals, before being accompanied by them to reach its own goal.
 
-Let $d_e^p\colon \mathbb{R}^p\times \mathbb{R}^p\to \mathbb{R}^p_0$ denote the euclidean distance.
+Let $D_e\colon \mathbb{R}^n\times \mathbb{R}^n\to \mathbb{R}^p_0$ denote the euclidean distance.
 
 We can express the formation control problem in the product state space as follows:
 \begin{itemize}
 	\item The goal set $\goal\subseteq X$ is defined as $\goal \coloneqq \goal^1\times \ldots \times \goal^N \subseteq X$, and
 	\item The static obstacle $\obs\subseteq X$ is defined as 
 		\begin{align}
-			&\obs \coloneqq\\ 
-			&\Set{ x\in X | 
+			&\obs \coloneqq\nonumber\\ 
+			&\Set{ x\in X^\times | 
 				\begin{array}{c}
-					\exists i\in [1;N]\;.\; d^{p}(h^i(\proj^i(x)),\obs) \leq \delta\\
-					\wedge\\
-					\exists (i,j)\in [1;N]\times [1;N]\;.\;\\ d^{p}_e\left(h^i(\proj^i(x)),h^j(\proj^j(x))\right)\notin\lambda^{i,j}\pm \mu
+					\exists i\in [1;N]\;.\; D(x,\avoid) \leq \delta\\
+					\vee\\
+					\exists (i,j)\in [1;N]\times [1;N]\;.\;\\ D_e\left(\proj^i(x),\proj^j(x)\right)\notin\lambda^{i,j}\pm \mu
 			\end{array}},					
 		\end{align}
 \end{itemize}
-where the last conjunction (highlighted in blue) in the definition of $\obs$ is the restriction required for maintaining the formation, and the rest are same as in Sec.~\ref{sec:local reach-avoid}.
+where the last disjunction in the definition of $\obs$ is the restriction required for maintaining the formation, and the rest are same as in Sec.~\ref{sec:local reach-avoid}.
 Once the sets $\goal$ and $\obs$ are obtained as above, we can use Alg.~\ref{alg:main} to find the set of feedback controllers $\set{C^i}$.
 
 %\todo{The example goes here...}
@@ -365,14 +378,21 @@ We follow the steps outlined in Alg.~\ref{alg:abcd-with-time-for-tracking} to sy
 We consider state and input spaces to be $X=[-2,17]\times[-2,17]\times[0.6,1.6]$ and
 $U=[-1,5]\times[-3,3]$, respectively. Choosing state and input partition sizes $\eta_{X}=\begin{bmatrix}0.02&0.02&0.02\end{bmatrix}^T$ and
 $\eta_{U}=\begin{bmatrix}0.3&0.15\end{bmatrix}^T$ results in $\hat X$ and $\hat U$ with $10^9$ and $820$ points. 
-Computing the transition system over inter-tube space with width $\varepsilon=\begin{bmatrix}0.18&0.18&0.18\end{bmatrix}^T$ results in smaller transition system with $|\hat P|=4.9\times 5$ points. Given the above settings, SCOTS computes abstraction in $570$ seconds ($114$ seconds in average) and $140$ seconds ($28$ seconds in average). 
+Computing the transition system over inter-tube space with width $\varepsilon=\begin{bmatrix}0.18&0.18&0.18\end{bmatrix}^T$ results in smaller transition system with $|\hat P|=4.9\times 5$ points. Given the above settings, SCOTS computes abstraction in $570$ seconds ($114$ seconds in average) and $140$ seconds ($28$ seconds in average). Fig.~\ref{fig:formation_distance} illustrates performance of open-loop and feedback controllers on regulating distance between the two of the drones with and without disturbance. As expected, in the absence of disturbance open-loop controller suffices and distance between the two drones (shown in solid blue) does not go below the threshold line $\delta=0.28$. Next, we consider the case when constant additive disturbance vectors $\begin{bmatrix}0 &0.03&0.03\end{bmatrix}^T$ and $\begin{bmatrix}0 &-0.03&-0.03\end{bmatrix}^T$ are being applied to the first and second drones throughout the whole horizon. It can be noticed that applying the open-loop controller causes that distance between the two drones (shown in solid green) becomes smaller than $\delta$. However, the feedback controller is still capable of maintaining distance above the given threshold (shown in solid red).
 
-\begin{figure}[t]
+ \begin{figure}[t]
 	\centering
 	\includegraphics[width=0.45\textwidth]{figures/formation.pdf}
 	\caption{Illustration of a (sample) robustified trajectory for the robot formation control example}
 \end{figure}\label{fig:formation_ex}
+
+\begin{figure}[t]
+	\centering
+	\includegraphics[width=0.45\textwidth]{figures/dist_formation.pdf}
+	\caption{Performance of open-loop and feedback controllers in regulating distance between drones for disturbance-free and perturbed situations for the formation control example}
+\end{figure}\label{fig:formation_distance}
  
+
 %Note that $\delta_{col} > \varepsilon$.
 %We use SCOTS in order to synthesize (local) feedback controllers that guarantee reachability, formation control and obstacle/collision avoidance in the presence of bounded disturbance such that $|W|\leq \begin{bmatrix}??&??&??\end{bmatrix}^T$. 
 %We consider state and input spaces to be $X=[??:??]^2\times[??,??]$ and
