--- a/prelims.tex
+++ b/prelims.tex
@@ -7,20 +7,20 @@
 We use the notation $\mathbb{R}$ and $\mathbb{R}_{>0}$ to denote the set of real numbers and the set of positive real numbers respectively.
 We use superscript $n>0$ with $\mathbb{R}$ and $\mathbb{R}_{>0}$ to denote the cartesian product of $n$ copies of $\mathbb{R}$ and $\mathbb{R}_{>0}$ respectively.
 Given two points $x=(x_1,\ldots, x_n)$ and $y=(y_1,\ldots, y_n)$ in $ \mathbb{R}^n$ (or $\mathbb{R}^n_{>0}$) and a relational symbol $\triangleright\in \set{\leq, <, = , >, \geq}$, we write $x\triangleright y$ if for every $i=1,\ldots,n$, $x_i\triangleright y_i$.
-The operator $|\cdot |$ is used to denote both the absolute value of a number and cardinality of a set, depending on the type of the operand, and the operator $\| \cdot \|$ is used to denote the infinity norm.  
+The operator $|\cdot |$ is used to denote both the absolute value of a vector and cardinality of a set, depending on the type of the operand, and the operator $\| \cdot \|$ is used to denote the infinity norm.  
 
 Let $f\colon A\to B$ and $g\colon C\to D$ be two functions.
-We define the product function $f\oplus g\colon A\times C\to B\times D $, $f\oplus g \colon (a,c)\mapsto (f(a),g(c))$.
+We define the product function $f\otimes g\colon A\times C\to B\times D $, $f\otimes g \colon (a,c)\mapsto (f(a),g(c))$.
 The product function can be defined for arbitrarily many functions by extending the definition in the obvious way.
 
-Throughout, we measure distance between two points, within a space $\mathbb{R}^n$, using the \emph{element-wise distance metric} $d^n\colon \mathbb{R}^n\times \mathbb{R}^n\to \mathbb{R}^n$, $d^n\colon \left((u_1,\ldots, u_n),(v_1,\ldots,v_n)\right)\mapsto \left(|u_1-v_1|,\ldots,|u_n-v_n|\right)$. 
-We extend the definition of $d^n$ to measure distance between a point and a set: for any given $u\in \mathbb{R}^n$ and $V\in \mathbb{R}^n$, $d^n(u,V) \coloneqq \left( \inf_{v\in V}|u_1-v_1|,\ldots, \inf_{v\in V}|u_n-v_n| \right)$.
-Given a point $c\in \mathbb{R}^n$ and given the parameter $\epsilon\in \mathbb{R}_{>0}^{n}$, we use the notation $\ball_\epsilon( x)$ to denote the ball in $\mathbb{R}^n$, centered around $c$ and having radius $\epsilon$.
+%Throughout, we measure distance between two points, within a space $\mathbb{R}^n$, using the \emph{distance metric} $d\colon \mathbb{R}^p\times \mathbb{R}^p\to \mathbb{R}_{\geq0}$, $d^p\colon \left(u,v\right)\mapsto \|u-v\|$. 
+%We extend the definition of $d^p$ to measure distance between a point and a set: for any given $u\in \mathbb{R}^p$ and $V\in \mathbb{R}^p$, $d^p(u,V) \coloneqq \inf_{v\in V}\|u-v\|$.
+Given a point $c\in \mathbb{R}^n$ and given the parameter $\varepsilon\in \mathbb{R}_{>0}^{n}$, we use the notation $\ball_\epsilon( x)$ to denote the ball in $\mathbb{R}^n$, centered around $c$ and having radius $\epsilon$.
 Formally, \[\ball_\varepsilon(c)\coloneqq \set{x
-	\in \mathbb{R}^n \mid  d^n(x,c)\leq \varepsilon }.\] 
+	\in \mathbb{R}^n \mid  |x-c|\leq \varepsilon }.\] 
 
 Let $A$ be a set.
-We use the notation $A^\infty$ to denote the set of all finite and infinite sequences formed using the members of $A$.
+We use the notation $A^\infty$ to denote the set of all finite and infinite sequences formed using the members of $A$. Finally, to define our control tasks, we use a subset of Linear Temporal Logic (LTL). In particular, we will use the until ($\mathcal{U}$) and next  ($\bigcirc$) operators. In brief, For detailed syntax and semantics of LTL, we refer to \cite{baier2008principles} and references therein.
 
 %Let $V$ be a finite set of real-valued variables.
 %We use the notation $\sem{V}$ (same symbol but in boldface blue) to denote the set of every possible valuations of the variables in $V$, i.e.\ an element in $\sem{V}$ assigns an unique real number to every variable in $V$.
@@ -37,14 +37,13 @@ We use the notation $A^\infty$ to denote the set of all finite and infinite sequ
  
 \smallskip
 \noindent\textbf{Control System.}\
-A \emph{control system} $\Sigma = (X, x_{\init}, U, W, f, Y, h)$
+A \emph{control system} $\Sigma = (X, x_{\init}, U, W, f)$
 consists of a \emph{state space} $X\subseteq \mathbb{R}^n$,
 an \emph{initial state} $x_\init\in X$,
  an \emph{input space} $U\subseteq\mathbb{R}^m$, 
-a compact \emph{disturbance set} $W\subset \mathbb{R}^n$, 
-a \emph{nominal dynamics} $f:X\times U\rightarrow X$ such that $f(\cdot,u)$ is locally Lipschitz for all $u\in U$,
-an \emph{output space} $Y\subseteq \mathbb{R}^p$, and
-an \emph{output function} $h\colon X\mapsto Y$. 
+a compact \emph{disturbance set} $W\subset \mathbb{R}^n$ and
+a \emph{nominal dynamics} $f:X\times U\rightarrow X$ such that $f(\cdot,u)$ is locally Lipschitz for all $u\in U$.%, an \emph{output space} $Y\subseteq \mathbb{R}^p$, and
+%an \emph{output function} $h\colon X\mapsto Y$. 
 %
 %We call each element of the set $\sem{X}$ a \emph{state}, and the set $\sem{X} = \mathbb{R}^{|X|}$ the \emph{state space} of $\Sigma$.
 %Throughout, we will assume that there is a metric $d\colon \sem{X}\times \sem{X}\to \mathbb{R}$ on the set $\sem{X}$ such that $(\sem{X},d)$ is a metric space. 
@@ -56,7 +55,7 @@ $\xi(\cdot)$ fulfills the following differential inclusion for almost every $t\i
 \begin{equation}\label{equ:def_f}
  \dot{\xi}\in f(\xi(t),u) + W. 
 \end{equation} 
-We collect all such solutions in the set $\Sol_\Sigma(x_0,u,\tau)$. 
+We collect all such solutions in the set $\Sol_\Sigma(x_0,u,T)$. 
 
 \smallskip
 \noindent\textbf{Transition System.}\
@@ -67,340 +66,33 @@ for all $1\leq k < |\rho|$ there exists $u\in U$ such that $z_k\in \delta(z_{k-1
 if $|\rho| < \infty$ then $\delta(z_{|\rho|},u)= \emptyset$ for all $u\in U$.
 %For $D\subseteq X$, a $D$-trajectory is a trajectory $\xi$ with $\xi(0)\in D$.
 
-\subsection{System Composition}
+%\subsection{System Composition}
 
 \smallskip
 \noindent\textbf{Product Control System.}\
-Let $\set{\Sigma^i}_{i\in [1;N]}$, $\Sigma^i=(X^i,x_\init^i,U^i,W^i,f^i,Y,h^i)$, be a set of $N$ control systems with the same output space.
-The \emph{product control system of } $\set{\Sigma^i}_{i\in [1;N]}$ is the control system $\Sigma^\times = (X^\times, x_\init^\times, U^\times, \set{0^n}, f^\times, Y^\times, h^\times)$ wherein $X^\times\coloneqq X^1\times \ldots \times X^N$ and we assume that $\sum_{i\in [1;N]} n_i=n$, $x_\init^\times\coloneqq (x_\init^1,\ldots,x_\init^N)$, $U^\times\coloneqq U^1\times\dots\times U^N\subset \reals^m$, $f^\times\coloneqq f^{1}\oplus \ldots\oplus f^{N}$, $Y^\times \coloneqq Y^N$, and $h^\times\coloneqq h^1\oplus \ldots \oplus h^N$. 
+Let $\set{\Sigma^i}_{i\in [1;N]}$, $\Sigma^i=(X^i,x_\init^i,U^i,W^i,f^i)$, be a set of $N$ control systems. 
+We assume that all of the control systems within $\set{\Sigma^i}_{i\in [1;N]}$ share an output space $Y\subseteq\reals^p$ to which there exists a set of projections of the form $h^i\colon X^i\rightarrow Y$. Remember our motivating example, wherein the crane's state space contains the cart's position ($z$), the cart's speed ($\dot z$), the pendulum's angular position ($\theta$) and speed ($\dot \theta$). The state space for the forklift is described with only one state variable $z'$ describing its position. Note that $X^1\subseteq \reals^4$ and $X^2\subseteq \reals$. Now, defining $h^1=\begin{bmatrix}z+l\sin(\theta)&y_1+l\cos(\theta)\end{bmatrix}^T$ and $h^2=\begin{bmatrix}z'&y_2\end{bmatrix}^T$, both state spaces can be projected to $Y\subseteq \reals^2$ in which we would like to compute distance.
+%For example, in a multi-robot scenario, all of the robots move within a two or three dimensional space independent of their individual dynamics.
+We define distance between two control systems as $D\colon X^i\times X^j\rightarrow \reals_{\geq 0}$, $D\colon (u,v)\mapsto\| h^i(u)-h^j(v)\|$. We extend the definition of $D$ to measure distance between a system's state and a set defined over the shared output space: for any given $u\in X^i$ and $V\subseteq X^i$, $D(u,V) \coloneqq \inf_{v\in V}\|u-v\|$. The \emph{product control system of } $\set{\Sigma^i}_{i\in [1;N]}$ is the control system $\Sigma^\times = (X^\times, x_\init^\times, U^\times, \set{0^n}, f^\times, D)$ wherein $X^\times\coloneqq X^1\times \ldots \times X^N$ and we assume that $\sum_{i\in [1;N]} n_i=n$, $x_\init^\times\coloneqq (x_\init^1,\ldots,x_\init^N)$, $U^\times\coloneqq U^1\times\dots\times U^N\subset \reals^m$ and $f^\times\coloneqq f^{1}\otimes \ldots\otimes f^{N}$. 
 We use the state projection operator $\proj^{i}\colon X^\times\to X^i$, $\proj^{i}\colon (x^1,\ldots,x^N)\mapsto x^i$.
 From here on, we will omit the domain of $i$ and will use ``$\set{\Sigma^i}$'' instead of ``$\set{\Sigma^i}_{i\in [1;N]}$'' for simpler notation.
 
 \smallskip
 \noindent\textbf{Product Transition System.}\
 Let $\set{S^i}_{i\in [1;N]}$, $S^i=(Z^i,z_\init^i,U^i,\delta^i)$, be a set of $N$ transition systems.
-The \emph{product transition system of } $\set{S^i}_{i\in [1;N]}$ is the transition system $S^\times \coloneqq (Z^\times, z^\times, U^\times, \delta^\times)$ such that $Z^\times \coloneqq Z^1\times \ldots \times Z^N$, $z^\times_\init\coloneqq (z_\init^1,\ldots,z_\init^N)$, $U^\times \coloneqq U^1\times \ldots\times U^N$, and $\delta^\times \coloneqq \delta^1\oplus\ldots \oplus \delta^N$.
+The \emph{product transition system of } $\set{S^i}_{i\in [1;N]}$ is the transition system $S^\times \coloneqq (Z^\times, z^\times, U^\times, \delta^\times)$ such that $Z^\times \coloneqq Z^1\times \ldots \times Z^N$, $z^\times_\init\coloneqq (z_\init^1,\ldots,z_\init^N)$, $U^\times \coloneqq U^1\times \ldots\times U^N$, and $\delta^\times \coloneqq \delta^1\otimes\ldots \otimes \delta^N$.
 From here on, we will omit the domain of $i$ and will use ``$\set{S^i}$'' instead of ``$\set{S^i}_{i\in [1;N]}$'' for simpler notation.
 
-\subsection{Controllers}
+\subsection{Controllers} Here, we only introduce the notations for representing different types of controllers used in this paper. More detailes can be found in Sec.~\ref{sec:controllers}. Let $\Sigma_\tau=(X,x_\init,U,f_\tau)$ denote sampled time abstraction of a control system $\Sigma$ for a given sample time $\tau>0$. An open-loop controller of $\Sigma_\tau$ is a function $C\colon [0;T]\to U$ for some given time horizon $T>0$. The open-loop is obtained when we connect $C$ with $\Sigma_\tau$ serially (denoted by $C \triangleright \Sigma_\tau$). The \emph{open-loop behavior} $\Beh^\ol(x_\init)$ of $\Sigma_\tau$ under $C$ is the set of all trajectories of the transition system $C \triangleright \Sigma_\tau$. A feedback controller of $\Sigma_\tau$ is a function $C\colon X\to U$. The closed-loop is obtained when we connect $C$ with $\Sigma_\tau$ in feedback (denoted by $C\parallel\Sigma_\tau$). %The \emph{closed-loop behavior} $\Beh^\cl(x_\init)$ of $\Sigma_\tau$ under $C$ is the set of all trajectories of the transition system $C\parallel\Sigma_\tau$. 
+Let $\Sigma^\times_\tau$ be the product sampled time abstraction of $\set{\Sigma^i} $.
+A global open-loop (feedback) controller of $\set{\Sigma^i} $ is an open-loop (a feedback) controller of $\Sigma_\tau^\times$.
+On the other hand, a set of local open-loop (feedback) controllers of $\set{\Sigma^i_\tau} $ is a set $\set{C^i} $ where, for every $i\in [1;N]$, $C^i$ is an open-loop (a feedback) controller of $\Sigma^i_\tau$.
 
-\smallskip
-\noindent\textbf{Sampled-time Abstraction of Control System.}\
-Let $\Sigma = (X, x_\init, U, W, f, \cdot, \cdot)$ be a control system and $\tau>0$ be the sampling time.
-(The ``$\cdot$''-s in place of the output space and the output function represent their insignificance in the respective sampled-time abstraction; similar convention will be used elsewhere in the paper.)
-A \emph{sampled-time abstraction} of $\Sigma$ is the state-transition system $(X,x_\init,U,f_\tau)$, such that $x'$ is in $f_\tau(x,u)$ if and only if there is a trajectory $\xi\in \Sol_\Sigma(x,u,\tau)$ with $\xi(\tau)=x'$.
-
-The \emph{product sampled-time abstraction} of a set of control systems $\set{\Sigma^i} $ is the product transition system of the set of sampled-time abstractions $\set{\Sigma^i_\tau} $.
-
-\smallskip
-\noindent\textbf{Open-loop Controller.}\
-Let $\Sigma_\tau=(X,x_\init,U,f_\tau)$ be the sampled-time abstraction of the control system $\Sigma=(X,x_\init,U,W,f,\cdot,\cdot)$.
-An \emph{open-loop controller of} $\Sigma_\tau$ is a function $C\colon [0;K]\to U$ for some given time horizon $K>0$.
-The \emph{open-loop} is obtained when we connect $C$ with $\Sigma_\tau$ serially, and is formalized using the transition system $C \triangleright \Sigma_\tau = (X\times [0;K],x_\init,U,f_\tau^C)$ such that $(x',k+1)$ is in $f_\tau^C((x,k),u)$ if and only if $x'$ is in $f_\tau(x,u)$ and $C(k)=u$.
-The \emph{open-loop behavior} $\Beh^\ol(x_\init)$ of $\Sigma_\tau$ under $C$ is the set of all trajectories of the transition system $C \triangleright \Sigma_\tau$.
-
-\smallskip
-\noindent\textbf{Feedback Controller.}\
-Let $\Sigma_\tau=(X,x_\init,U,f_\tau)$ be the sampled-time abstraction of the control system $\Sigma=(X,x_\init,U,W,f,\cdot,\cdot)$.
-A \emph{feedback controller of} $\Sigma_\tau$ is a function $C\colon X\to U$.
-The \emph{closed-loop} is obtained when we connect $C$ with $\Sigma_\tau$ in feedback, and is formalized using the transition system $C\parallel\Sigma_\tau = (X,x_\init,U,f_\tau^C)$ such that $x'$ is in $f_\tau^C(x,u)$ if and only if $x'$ is in $f_\tau(x,u)$ and $C(x)=u$.
-The feedback controller $C$ when connected to the sampled-time control system $\Sigma_\tau$ can be interpreted as a zero-order-hold controller for the control system $\Sigma$.
-The \emph{closed-loop behavior} $\Beh^\cl(x_\init)$ of $\Sigma_\tau$ under $C$ is the set of all trajectories of the transition system $C\parallel\Sigma_\tau$.
-
-\smallskip
-\noindent\textbf{Local and Global Controller.}\
-Let $\set{\Sigma^i} $ be a set of control systems, $\tau >0$ be a given sampling time, $\set{\Sigma^i} $ be the respective sampled-time abstractions, $\Sigma^\times$ be the product control system of $\set{\Sigma^i} $, and $\Sigma^\times_\tau$ be the product sampled time abstraction of $\set{\Sigma^i} $.
-A \emph{global} open-loop (feedback) controller of $\set{\Sigma^i} $ is an open-loop (a feedback) controller of $\Sigma_\tau^\times$.
-On the other hand, a set of \emph{local} open-loop (feedback) controllers of $\set{\Sigma^i_\tau} $ is a set $\set{C^i} $ where, for every $i\in [1;N]$, $C^i$ is an open-loop (a feedback) controller of $\Sigma^i_\tau$.
-
-\smallskip
-\noindent\textbf{Decentralized Control.}\
-Given $\set{\Sigma_\tau^i} $ and a set of open-loop (feedback) controllers $\set{C^i} $, we define the \emph{decentralized open-loop} (\emph{decentralized closed-loop})---denoted by $\set{C^i} \triangleright \set{\Sigma_\tau^i} $ ($\set{C^i} \parallel \set{\Sigma_\tau^i} $)---as the product transition system of $\set{C^i\triangleright \Sigma^i_\tau} $ ($\set{C^i\parallel \Sigma^i_\tau} $).
-
-\subsection{Linear Temporal Logic for Control Specification}
-
-We will use Linear Temporal Logic (LTL) for specifying control tasks; we refer to usual references \cite{baier2008principles} for detailed syntax and semantics of LTL.
-Given a pair of predicates $p$ and $q$, as usual, we will use the notation 
-$\lnot p$ for \emph{negation} of $p$, 
-$p\vee q$ for $p$ \emph{or} $q$,
-$p\wedge q$ for $p$ \emph{and} $q$,
-$\bigcirc p$ for \emph{next} $p$,
-$p\; \mathcal{U}\; q$ for $p$ \emph{until} $q$,
-$\square p$ for \emph{always} $p$,
-$\lozenge p$ for \emph{eventually} $p$.
-
-We also define a robust version of LTL formulae.
-Suppose $\Psi$ be an LTL formula defined using a set of predicates on $\mathbb{R}^n$ for some $n>0$.
-Let $\epsilon\in \mathbb{R}^n_{>0}$ be a given \emph{robustness margin}.
-Let $\rho=(x_0,x_1,\ldots)$ be an infinite sequence of elements from $\mathbb{R}^n$.
-Define the $\epsilon$-neighborhood of $\rho$ as the set of infinite sequences $\rho_\epsilon\coloneqq \set{(x_0',x_1',\ldots) \mid \forall i\in \mathbb{N}\;.\; x_i'\in \Omega_\epsilon(x_i)}$.
-Then we define $\Psi_\epsilon$ as an LTL formula such that for every sequence $\rho=(x_0,x_1,\ldots)$, if $\rho$ satisfies $\Psi_\epsilon$, then every sequence $(x_0',x_1',\ldots)$ in $\rho_\epsilon$ satisfies $\Psi$.
-In practice, we obtain $\Psi_\epsilon$ from $\Psi$ by strengthening the predicates which were used to define $\Psi$: 
-For example, if $\Psi = \square S$ for a set $S\subseteq \mathbb{R}^n$, then $\Psi_\epsilon = \square S'$ with $S' = S \ominus \Omega_\epsilon(0)$ being the strengthening of $S$, where ``$\ominus$'' denotes the Minkowski difference of two sets.
-
-Given a control system $\Sigma$, an open-loop (a feedback) controller $C$ of the sampled-time abstraction $\Sigma_\tau$ of $\Sigma$, and an LTL specification $\Phi$ defined over a set of predicates over the state space of $\Sigma$, we will say that $C\triangleright \Sigma_\tau$ ($C\parallel \Sigma_\tau$) realizes $\Phi$ if every trajectory in the set $\Beh^\ol(x_\init)$ ($\Beh^\cl(x_\init)$) satisfies $\Phi$.
-
-Likewise, given $\set{\Sigma_\tau^i} $, a set of open-loop (feedback) controllers $\set{C^i} $, and an LTL specification $\Phi$ defined using a set of predicates over the state space of $\Sigma^\times$, we will say that decentralized open-loop (decentralized closed-loop) realizes $\Phi$ if every trajectory of $\set{C^i}\triangleright \set{\Sigma_\tau^i}$ ($\set{C^i}\parallel \set{\Sigma_\tau^i}$) satisfies $\Phi$.
-
-\subsection{Abstraction-Based Controller Synthesis}
-Let $\Sigma = (X, U, W, f, \cdot, \cdot)$ be a control system, $\tau>0$ be the sampling time, $\bound$ be a subset of $X$ which imposes a safety specification, $\Xh$ be a given \emph{finite partition} of $\bound$, and $\Uh$ be a \emph{finite subset} of equally spaced (w.r.t.\ infinity norm on $\mathbb{R}^m$) points in the set $U$. A \emph{finite-state abstraction} of $\Sigma$ is a finite state-transition system $(\Xh,\Uh,\fh)$, where $\xh'$ is in $\fh(\xh,u)$ if there is a pair of states $x\in \xh$ and $x'\in \xh'$ such that there is a trajectory $\xi\in \Sol_\Sigma(x,u,\tau)$ with $\xi(\tau)=x'$.
-
-In this work, we will use uniformly sized rectangular partition elements to construct the set $\Xh$ from the set $\bound$.
-Without going into the detail of the construction, we assume that the size of the partition elements is provided as a vector $\eta_x\in \mathbb{R}^n_{>0}$ which is an input to the abstraction procedure.
-Note that, the larger $\eta_x$ is (where comparison is made dimension-wise), the smaller is the state space $\Xh$ resulting in an efficient computation.
-On the other hand, the smaller $\eta_x$ is, the better is the precision of the abstraction $\widehat{\Sigma}$ increasing the chance of a successful controller synthesis.
-
-Similar to the state-space partition size $\eta_x$, we also assume that the set $\Uh$ is chosen based on an input-space discretization parameter $\eta_u\in \mathbb{R}^m_{>0}$ that governs the distance between the points in $\Uh$. 
-
-For the control system $\Sigma$, let $\Sigma_\tau$ and $\hat \Sigma$ be the corresponding sampled-time abstraction  finite-state abstraction, respectively. A \emph{feedback refinement relation} (FRR) from $\Sigma_\tau$ to $\widehat{\Sigma}$ 
-is a relation $Q\subseteq \bound\times \Xh$ (for details see \cite{reissig2016feedback}). We write $\Sigma_\tau \frr{Q} \widehat{\Sigma}$ if $Q$ is an FRR from $\Sigma_\tau$ to $\widehat{\Sigma}$.
-
-We assume that there is a black-box procedure named $\findAbs$ which takes as input the description of $\Sigma = (X,U,W,f,\cdot,\cdot)$, a compact subset $\bound$ of the set $X$, a sampling time $\tau>0$, and state space and input space discretization parameters $\eta_x$ and $\eta_u$ respectively, and returns a finite-state abstraction $\widehat{\Sigma} = (\Xh,\Uh,\fh)$ of $\Sigma$ and a relation $Q$ s.t.\ $\Sigma_\tau \frr{Q} \widehat{\Sigma}$.
-The actual implementation of $\findAbs$ can be found in \cite{reissig2016feedback}.
-
-Having computed a finite state abstraction $\widehat{\Sigma}$ s.t.\ $\Sigma_\tau \frr{Q} \widehat{\Sigma}$,
-we can synthesize an abstract controller of the form $\widehat{C}:\Xh\rightarrow \Uh$ for $\widehat{\Sigma}$ using methods from the reactive synthesis literature. Finally, we obtain the desired controller $C$ as $C:=\widehat{C}\circ Q$. It is known that this three step process produces a controller $C$ that realizes the given specification on $\Sigma_\tau$ \cite{reissig2016feedback}.
- 
-%\smallskip
-%\noindent\textbf{Controller and Closed Loop.}
-%Let $\Sigma = (X, U, W, f)$ be a control system and $\tau>0$ be the sampling time.
-%A (state-feedback) \emph{controller} for $\Sigma$ is a function $C:X\rightarrow U$.
-%The \emph{closed loop}, formed by connecting $C$ in feedback with $\Sigma$, is the control system $\Sigma\parallel C = (X,U,W,f^C)$ whose trajectories fulfill the following differential inclusion for almost every $t\in [0,\tau]$:
-%\begin{equation}\label{equ:def_f^C}
-% \dot{\xi}\in f(\xi(t),C(\xi(0))) + W. 
-%\end{equation} 
-
-%\smallskip
-%\noindent\textbf{Systems.} %\label{sec:prelim_abstraction}
-%%
-%A \emph{system} $S=(X,U,F)$ consists of a state space $X$, an input space $U$, and a transition function $F:X\times U \rightarrow 2^X$. 
-%A system $S$ is \emph{finite} if $X$ and $U$ are finite. 
-%A trajectory $\xi\in X^\infty$ is a maximal sequence of states compatible with $F$:
-%for all $1\leq k < |\xi|$ there exists $u\in U$ s.t.\ $\xi(k)\in F(\xi(k-1),u)$ and 
-%if $|\xi| < \infty$ then $F(\xi(|\xi|),u)= \emptyset$ for all $u\in U$.
-%For $D\subseteq X$, a $D$-trajectory is a trajectory $\xi$ with $\xi(0)\in D$.
-%%The \emph{behavior} $\Beh{S, D}$ of a system $S=(X,U,F)$ w.r.t.\ $D\subseteq X$ 
-%%consists of all $D$-trajectories; when $D=X$, we simply write $\Beh{S}$.
+%here
+%\subsection{Abstraction-Based Controller Synthesis Background}
+%Let $\Sigma = (X, U, W, f, \cdot, \cdot)$ be a control system, $\tau>0$ be the sampling time, $\bound$ be a subset of $X$ which imposes a safety specification, $\Xh$ be a given \emph{finite partition} of $\bound$, and $\Uh$ be a \emph{finite subset} of equally spaced (w.r.t.\ infinity norm on $\mathbb{R}^m$) points in the set $U$. A \emph{finite-state abstraction} of $\Sigma$ is a finite state-transition system $(\Xh,\Uh,\fh)$, where $\xh'$ is in $\fh(\xh,u)$ if there is a pair of states $x\in \xh$ and $x'\in \xh'$ such that there is a trajectory $\xi\in \Sol_\Sigma(x,u,\tau)$ with $\xi(\tau)=x'$.
 %
-%\smallskip
-%\noindent\textbf{Controllers and Closed Loop Systems.}
-%A \emph{controller} $\C=(\Uc,U,\Gc)$ for a system $S=(X,U,F)$
-%consists of a controller \emph{domain} $\Uc\subseteq X$, a space of inputs $U$, and a control map 
-%$\Gc:\Uc\fun 2^{U}\setminus\set{\emptyset}$ 
-%mapping states in its domain to non-empty sets of control inputs.
-%The \emph{closed loop system} formed by interconnecting
-%$S$ and $\C$ in \emph{feedback} is defined by the system 
-% $S^{cl}=(X,U, F^{cl})$ with $F^{cl}:X\times U \rightarrow 2^{X}$ s.t.\ 
-% $x'\in F^{cl}(x,u)$ iff $x\in \Uc$ and $u\in\Gc(x)$ and $x'\in F(x,u)$, or $x\notin \Uc$ and $x'\in F(x,u)$.
+%We assume that the size of the partition elements is provided as a vector $\eta_x\in \mathbb{R}^n_{>0}$ which is an input to the abstraction procedure. We also assume that the set $\Uh$ is chosen based on an input-space discretization parameter $\eta_u\in \mathbb{R}^m_{>0}$. 
 %
-%% 
-%% If $\C$ is \emph{static}, the closed loop system simplifies to
-%% \begin{equation*}%\label{equ:def_Fcl}
-%%  S^{cl}=(X,U,F^{cl})
-%%  ~\text{s.t.}~
-%%  F^{cl}(x,u)=
-%%  \DiCases{F(x,u)}{u=\Gc(x)}{\emptyset}{\text{otherwise}}.
-%% \end{equation*}
-%
-%\smallskip
-%\noindent\textbf{Control Problem.}
-%We consider specifications given as $\omega$-regular languages 
-%whose atomic predicates are interpreted as sets of states. 
-%Given a specification $\psi$, a system $S$, and an interpretation of the predicates as sets
-%of states of $S$, we write $\semantics{\psi}_S\subseteq \Beh{S}$ 
-%for the set of behaviors of $S$ satisfying $\psi$.
-%% 
-%The pair $\tuple{S,\psi}$ is called a \emph{control problem} on $S$ for $\psi$. 
-%% 
-%A controller $\C = (\Uc, U, G)$ for $S$ solves $\tuple{S,\psi}$ if
-%$\Beh{S^{cl}, \Uc}\subseteq\semantics{\psi}_S$.
-%The set of all controllers solving $\tuple{S,\psi}$ is denoted by $\WIN(S, \psi)$.
-%
-%
-%\smallskip
-%\noindent\textbf{Feedback Refinement Relations.}
-%Let $S_i=(X_i,U_i,F_i)$, $i\in\Set{1,2}$ be two systems with
-%$U_2\subseteq U_1$. 
-%A \emph{feedback refinement relation} (FRR) from $S_1$ to $S_2$ 
-%is a relation $Q\subseteq X_1\times X_2$ s.t.\ 
-%for all $x_1\in X_1$ there is some $x_2\in X_2$ such that $Q(x_1,x_2)$ and
-%for all $(x_1,x_2)\in Q$, we have
-%\begin{inparaenum}[(i)]
-% \item $U_{S_2}(x_2)\subseteq U_{S_1}(x_1)$, and 
-% \item $u\in U_{S_2}(x_2) \Rightarrow Q(F_1(x_1,u))\subseteq F_2(x_2,u)$
-%\end{inparaenum}
-%where $U_{S_i}(x):=\SetComp{u\in U_i}{F_i(x,u)\neq \emptyset}$.
-%% \begin{equation}\label{equ:Us}
-%%  U_{S_i}(x)=\SetComp{u\in U_i}{F_i(x,u)\neq \emptyset}.
-%% \end{equation}
-%% 
-%We write $S_1\frr{Q} S_2$ if $Q$ is an FRR from $S_1$ to $S_2$.
-%
-%\smallskip
-%\noindent\textbf{Abstraction-Based Controller Synthesis (ABCS).}
-%Consider two systems $S_1$ and $S_2$, with $S_1\frr{Q} S_2$. 
-%Let $\C=(\Uc,U_2,\Gc)$ be a controller for $S_2$. 
-%Then, as shown in \cite{ReissigWeberRungger_2017_FRR}, $\C$ 
-%can be refined into a controller for $S_1$, defined by 
-%$\C\circ Q=(\widetilde{\Uc},U_1,\widetilde{\Gc})$ 
-%with $\widetilde{\Uc}= Q^{-1}(\Uc)$, and
-%% $\widetilde{\Fc}(z,x)=\SetComp{z'}{\ExQ{\xa\in Q(x)}{z'\in\Fc(z,\xa)}}$, and
-%$\widetilde{\Gc}(x_1)=\SetComp{u\in U_1}{\ExQ{x_2\in Q(x_1)}{u\in\Gc(x_2)}}$ for all $x_1\in\widetilde{\Uc}$. 
-%% 
-%This implies soundness of ABCS. %, as shown in \cite{ReissigWeberRungger_2017_FRR}, Thm. VI.3.
-%
-%\begin{proposition}[\cite{ReissigWeberRungger_2017_FRR}, Def. VI.2, Thm. VI.3]
-%\label{prop:paimpliespt}
-%Let $S_1\frr{Q} S_2$ and $\C\in\WIN(S_2,\psi)$ for a specification $\psi$.
-%If for all $\xi_1\in \Beh{S_1}$ and $\xi_2\in\Beh{S_2}$ with
-%$\dom{\xi_1}=\dom{\xi_2}$ and $(\xi_1(k), \xi_2(k))\in Q$
-%for all $k\in \dom{\xi_1}$ holds that  
-%$\xi_2\in\semantics{\psi}_{S_2}\Rightarrow\xi_1\in\semantics{\psi}_{S_1}$, 
-%then $\C\circ Q \in \WIN(S_1, \psi)$.
-%% \begin{equation}
-%%  \propImp{
-%%  \begin{propConjA}
-%%   \xi_2\in\varphi_2[\psi]\\
-%%   \AllQ{k\in\N}{(\xi_1(k),\xi_2(k))\in Q}
-%%  \end{propConjA}
-%% }{\xi_1\in\varphi_1[\psi]}.
-%% \end{equation}
-%\end{proposition}
-%
-%
-%
-%
-%\smallskip
-%\noindent\textbf{Time-Sampled System.}\
-%Given a time sampling parameter $\tau>0$, we define the \emph{time-sampled system} $\St{}(\Sigma,\tau)=(X,U,\Ft{})$ associated with $\Sigma$, 
-%where $X$, $U$ are as in $\Sigma$, and the transition function $\Ft{}:X\times U\fun 2^X$ is defined as follows.
-%For  all $x\in X$ and $u \in U$, we have $x'\in \Ft{}(x,u)$ iff there exists a solution $\xi\in\ON{Sol}_f(x,\tau,u)$ s.t.\ $\xi(\tau)=x'$.
-%
-%\smallskip
-%\noindent\textbf{Covers.}\ 
-%% For vectors $a,b\in(\real{}\cup\Set{\pm\infty})^n$, a \emph{cell} $\hyint{a,b}$ is closed set $\set{x\in\real{n}\mid \forall i\in\set{1,\ldots,n}.a_i\leq x_i \leg b_i}$.
-%% To define a \emph{finite} transition system as an abstraction of $\St{}$ 
-%A \emph{cover} $\widehat{X}$ of the state space $X$ is a set of
-%non-empty, closed hyper-intervals $\hyint{a,b}$ with $a,b\in (\real{}\cup\Set{\pm\infty})^n$ called \emph{cells},
-%such that every $x\in X$ belongs to some cell in $\widehat{X}$. 
-%% This definition allows for unbounded cells in $\widehat{X}$. 
-%% 
-%% 
-%Given a grid parameter $\eta \in\real{}_{>0}^n$, we say that a point $c\in Y$ is \emph{$\eta$-grid-aligned} if there is $k\in\Z^n$ s.t.\ for each $i\in \set{1,\ldots,n}$,
-%$c_i = \alpha_i + k_i\eta_i - \frac{\eta_i}{2}$.
-%Further, a cell $\hyint{a,b}$ is \emph{$\eta$-grid-aligned} if there is a $\eta$-grid-aligned point $c$ s.t.\ $a = c - \frac{\eta}{2}$ and
-%$b = c + \frac{\eta}{2}$;
-%such cells define sets of diameter $\eta$ whose center-points are $\eta$-grid-aligned. 
-%% Given a compact set $Y=\hyint{\alpha, \beta}\subseteq X$ with $\alpha,\beta\in\real{n}$ s.t.\ $\beta - \alpha$ is an integer multiple of $\eta$
-%
-%% To construct a \emph{finite} abstractions of $\St{}$ using such \emph{$\eta$-grid-aligned} cells as abstract states, we consider a compact \emph{region of interest} $Y \subseteq X$ where we assume that $Y = \hyint{\alpha, \beta}$ with $\alpha,\beta\in\real{n}$ s.t.\ $\beta - \alpha$ is an integer multiple of $\eta$. Then we define the \emph{cover} $\widehat{X}$ of $Y$ as the \emph{finite} set of non-overlapping \emph{$\eta$-grid-aligned} cells 
-%% % $\hyint{a,b}$ with $a,b\in (\real{}\cup\Set{\pm\infty})^n$, 
-%% s.t.\ every $x\in Y$ belongs to exactly one cell $\xa\in\widehat{X}$. 
-%% Clearly, if $Y = \hyint{\alpha, \beta}$ with $\alpha,\beta\in\real{n}$ s.t.\ $\beta - \alpha$ is an integer multiple of $\eta$ we have that the set of $\eta$-grid-aligned cells is a \emph{finite cover} for $Y$.
-%
-%% In the following, we assume the region of interest $Y$ is fixed once and for all.
-%% \RM{OMIT?}\footnote{
-%% 	$Y$ induces a \emph{finite} \RM{undef:} abstaction by restricting attention to a subset of the state space for control. 
-%% 	$Y$ can also be interpreted as a global safety requirement (see Sec.~\ref{sec:problem}).}
-%
-%\smallskip
-%\noindent\textbf{Abstract Systems.}\ 
-%An \emph{abstract system} $\Sa{}(\Sigma,\tau,\eta)=(\Xa{},\Ua{},\Fa{})$ for a control system $\Sigma$,
-%a time sampling parameter $\tau > 0$, and a grid parameter $\eta \in \mathbb{R}^n_{>0}$
-%consists of an abstract state space $\Xa{}$, a finite abstract input space $\Ua\subseteq U$, and an abstract transition function 
-%$\Fa{}:\Xa{}\times \Ua{}\rightarrow 2^{\Xa{}}$. To ensure that $\Sa{}$ is finite, we consider a compact \emph{region of interest} $Y=\hyint{\alpha, \beta}\subseteq X$ with $\alpha,\beta\in\real{n}$ s.t.\ $\beta - \alpha$ is an integer multiple of $\eta$. 
-%Then we define $\Xa{}=\widehat{Y}\cup\widehat{X}'$ s.t.\ $\widehat{Y}$ is the \emph{finite} set of \emph{$\eta$-grid-aligned} cells covering $Y$ and $\widehat{X}'$ is a finite set of large unbounded cells covering the (unbounded) region $X\setminus Y$. 
-%% 
-%We define $\Fa{}$ based on the dynamics of $\Sigma$ only within $Y$. That is, for all $\xa\in\Ya{}$, $\xa'\in\Xa{}$, and $u\in\Ua{}$ 
-%we require
-% \begin{align}\label{eq:next state abs sys 0}
-%   \xa'\in \Fa{}(\xa,u) \ \mbox{ if } \ 	\exists\xi\in \cup_{x\in\xa}\ON{Sol}_f(x,\tau,u) \;.\; \xi(\tau) \in \xa'.
-% \end{align}
-%For all states in  $\xa\in(\Xa{}\setminus\Ya{})$ we have that $\Fa{}(\xa,u)=\emptyset$ for all $u\in\Ua$.
-%% $\hyint{a,b}$ with $a,b\in (\real{}\cup\Set{\pm\infty})^n$, 
-%% An \emph{abstract system} $\Sa{}(\Sigma,\tau,\eta)=(\Xa{},\Ua{},\Fa{})$ for a control system $\Sigma$,
-%% a time sampling parameter $\tau > 0$, and a grid parameter $\eta \in \mathbb{R}^n_{>0}$
-%% consists of:
-%% % 
-%% \begin{inparaenum}[(i)]
-%%  \item an abstract state space $\Xa{}$ which forms a finite cover of $X$;
-%%  moreover, we assume there is a non-empty subset 
-%%  $\Ya{}\subseteq\Xa{}$ which forms a finite cover of $Y$ with $\eta$-grid aligned cells,
-%%  \item a finite abstract input space $\Ua\subseteq U$, and
-%%  \item an abstract transition function 
-%% $\Fa{}:\Xa{}\times \Ua{}\rightarrow 2^{\Xa{}}$ such that 
-%% for all $\xa\in(\Xa{}\setminus\Ya{})$ and $u\in\Ua$ we have $\Fa{}(\xa,u)=\emptyset$ 
-%% and for all $\xa\in\Ya{}$, $\xa'\in\Xa{}$, and $u\in\Ua{}$ 
-%% it holds that
-%%  \begin{align}\label{eq:next state abs sys 0}
-%%    \xa'\in \Fa{}(\xa,u) \ \mbox{ if } \ 	\exists\xi\in \cup_{x\in\xa}\ON{Sol}_f(x,\tau,u) \;.\; \xi(\tau) \in \xa'.
-%%  \end{align}
-%% \end{inparaenum}
-%We extend $\Fa{}$ to sets of abstract states $\Upsilon\subseteq \Xa{}$ by defining $\Fa{}(\Upsilon,u) := \bigcup_{\xa\in \Upsilon} \Fa{}(\xa,u)$.
-%
-%While $\Xa{}$ is not a partition of the state space $X$, notice that cells only overlap at the boundary and one can define 
-%a deterministic function that resolves the resulting non-determinism by consistently mapping such boundary states to a unique cell covering it. 
-%The composition of $\Xa{}$ with this function defines a partition.
-%To avoid notational clutter, we shall simply treat $\widehat{X}$ as a partition.
-%
-%% \smallskip
-%% \noindent\textbf{Induced FRR.}\
-%% %\label{sec:prelim:FRR}
-%% %
-%% It was shown in \cite{ReissigWeberRungger_2017_FRR}, Thm. III.5 that the relation
-%% $\Qa{}\subseteq X\times \Xa{}$ defined by $(x,\xa)\in\Qa{}$ iff $x\in\xa$
-%% is an FRR between $\St{}$ and $\Sa{}$, i.e.,
-%% $\St{}\frr{\Qa{}}\Sa{}$.
-%% %
-%% Hence, we can apply ABCS as described in \REFsec{sec:Prelim_FRR} by computing a 
-%% controller for $\Sa{}$ which can then be refined to a controller for $\St{}$ under the pre-conditions of Prop.~\ref{prop:paimpliespt}.% holds. 
-%
-%\smallskip
-%\noindent\textbf{Control Problem.}\
-%It was shown in \cite{ReissigWeberRungger_2017_FRR}, Thm. III.5 that the relation
-%$\Qa{}\subseteq X\times \Xa{}$, defined by all tuples $(x,\xa)\in\Qa{}$ for which $x\in\xa$,
-%is an FRR between $\St{}$ and $\Sa{}$, i.e.,
-%$\St{}\frr{\Qa{}}\Sa{}$.
-%%
-%Hence, we can apply ABCS as described in \REFsec{sec:Prelim_FRR} 
-%by computing a controller $C$ for $\Sa{}$ which can then be refined to a controller for $\St{}$ under the pre-conditions of Prop.~\ref{prop:paimpliespt}.% holds. 
-%
-%More concretely, we consider safety and reachability control problems for the 
-%continuous-time system $\Sigma$, which are defined by a set of \emph{static obstacles} $\obstacle \subset X$ which 
-%should be avoided and a set of \emph{goal states} $\goal\subseteq X$ which should be reached, respectively.
-%Additionally, when constructing $\Sa{}$, we used a compact region of interest $Y\subseteq X$ to ensure \emph{finiteness} of $\Sa{}$ allowing to apply tools from reactive synthesis \cite{MPS95} to compute $C$. 
-%This implies that $C$ is only valid within $Y$. 
-%We therefore interpret $Y$ as a \emph{global safety requirement} and synthesize a controller which keeps the system within 
-%$Y$ while implementing the specification. 
-%This interpretation leads to a safety and reach-avoid
-%control problem, w.r.t.\ a safe set $\Rset=Y\setminus \obstacle$ and target set $\Tset=\goal \cap\Rset$.
-%% formally defined in linear temporal logic (LTL) \cite{baier2008principles} by
-%% \begin{subequations}\label{equ:LTLspec}
-%% \begin{align}
-%% 	\Specs &= \text{always}\; (\Rset{}),\quad\text{and}\label{equ:LTLspec:safe}\\
-%% 	\Specr &= \left[\left(\text{always}\; (\Rset )\right)\; \text{until} \; \Tset{}\right].\label{equ:LTLspec:reach} %\wedge \left[\text{eventually}\; T\right]
-%% \end{align}
-%% \end{subequations}
-%As $\Rset{}$ and $\Tset{}$ can be interpreted as predicates over the state space $X$ of $\St{}$, this directly defines the control problems $\tuple{\St{},\Specs}$ and $\tuple{\St{},\Specr}$ via
-%% . As $C\in\WIN(\St{},\Spec)$ iff $\Beh{\St{}^{cl}}\subseteq\semantics{\Spec}_{\St{}}$ the latter holds for $\Spec$ in \eqref{equ:LTLspec} iff
-%\begin{subequations}\label{equ:Csound}
-% \begin{align}
-% \semantics{\Specs}_{\St{}}&:=\SetCompX{\xi\in\Beh{\St{}}}{\AllQ{k\in\dom{\xi}}{\xi(k)\in\Rset{}}},~\text{and}\label{equ:Csound:safe}\\
-% \semantics{\Specr}_{\St{}}&:=\SetCompX{\xi\in\Beh{\St{}}}{\ExQ*{k\in\dom{\xi}}{
-% \begin{propConjA}
-%  \xi(k)\in\Tset{}\\
-%  \AllQ{k' \leq k}{\xi(k')\in \Rset{}}
-% \end{propConjA}
-% }}\label{equ:Csound:reach}
-%\end{align}
-%\end{subequations}
-%for safety and reach-avoid control, respectively.
-%Intuitively, a controller $C\in\WIN(\St{},\Spec)$ applied to $\Sigma$ is a sample-and-hold controller, which ensures that the specification holds on all closed-loop trajectories \emph{at sampling instances}.%
-%\footnote{This implicitly assumes that sampling times and grid sizes are such that no \enquote{holes} occur between consecutive cells visited by a trajectory. This can be formalized by assumptions on the growth rate of $f$ in \eqref{equ:def_f} which is beyond the scope of this paper.}
-%
-%To compute $C\in\WIN(\St{},\Spec)$ via ABCS as described in \REFsec{sec:Prelim_FRR} we need to ensure that the pre-conditions of Prop.~\ref{prop:paimpliespt} hold. This is achieved by \emph{under-approximating} the safe and target sets by abstract state sets 
-%\begin{align}\label{equ:RsetaTseta}
-% \Rseta{}=\SetComp{\xa\in\Xa{}}{\xa\subseteq \Rset{}},~\text{and}~
-% \Tseta{}=\SetComp{\xa\in\Xa{}}{\xa\subseteq \Tset{}},
-%\end{align}
-%and defining $\semantics{\Specs}_{\Sa{}}$ and $\semantics{\Specr}_{\Sa{}}$ via \eqref{equ:Csound} by substituting $\St{}$ with $\Sa{}$, $R$ with $\Rseta{}$ and $T$ with $\Tseta{}$. With this, it immediately follows from Prop.~\ref{prop:paimpliespt} that $C\in\WIN\tuple{\Sa{},\Spec}$ can be refined to the controller $C\circ Q\in\WIN{\tuple{\St{},\Spec}}$.
+%We assume that there is a black-box procedure named $\findAbs$ which takes as input the description of $\Sigma = (X,U,W,f,\cdot,\cdot)$, a compact subset $\bound$ of the set $X$, a sampling time $\tau>0$, and state space and input space discretization parameters $\eta_x$ and $\eta_u$ respectively, and returns a finite-state abstraction $\widehat{\Sigma} = (\Xh,\Uh,\fh)$ of $\Sigma$ and a feedback refinement relation $Q$ from $\Sigma_\tau$ to $\hat\Sigma$. More details can be found in Sec.~\ref{sec:abcd}.
+%here
