--- a/related_work.tex
+++ b/related_work.tex
@@ -1,11 +1,14 @@
 \subsection{Related Work}
 
-We categorize the related work into (1) the ones which propose hierarchical controller synthesis techniques, (2) the ones which address the problem of multi-robot controller synthesis, and (3) the ones which combine (1) and (2) like us.
+We categorize the related work into (1) the ones which propose hierarchical controller synthesis techniques, (2) the ones which address the problem of multi-agent controller synthesis, and (3) the ones which combine (1) and (2) like us.
 
 \begin{enumerate}[(1)]
-	\item The hierarchical approach, combining high-level planning and low-level tracking, is not new.
-	Yet most of the existing works use the hierarchical approach for controller synthesis for a single robot \cite{herbert2017fastrack, fan2020fast, fan2018controller, wongpiromsarn2012receding, tedrake2010lqr, singh2018robust, DBLP:journals/tac/MeyerD19, DBLP:journals/corr/abs-1911-09773, Yang2017milp}.
-	In contrast, we consider a hierarchical control for decentralized control of a group of robots.
+	\item Recently, using hierarchical approach, that is combination of high-level planning and low-level tracking has gained especial attention. The existing methods can be categorized based on the dynamics that they can handle (e.g. nonlinear, perturbed, etc.), considered class of specifications and their scalability. A common approach to solve for reach-avoid specifications is to perform the high-level planning over a lower dimensional dynamical model and use
+	Sum-of-Squares (SOS) programming or Hamilton Jacobi (HJ) method to obtain a low-level controller ensuring a bounded error between the two models \cite{herbert2017fastrack,DBLP:journals/corr/abs-1911-09773,singh2018robust}. However, These mehods (SOS and HJ) are not easilly parallelizable and hence cannot gain scalability in the order that we do. To design low-level tracking controllers, we use ABCD for which there exists known parallelization schemes (\cite{KhaledZ19pfaces}). Furthermore, in contrast to \cite{herbert2017fastrack,singh2018robust}, our method does not require selecting a lower-domensional planning model that can be related to the full-order dynamics via a smartly chosen linear mapping. There are other works that only consider special classes of systems such as linear (\cite{fan2018controller,wongpiromsarn2012receding}), disturbance-free (\cite{tedrake2010lqr,fan2020fast}) and finite transition systems (\cite{Yang2017milp}). In contrast, our method can support continuous time nonlinear dynamics and give guarantee against worst-case bounded disturbance.
+	
+	%The hierarchical approach, combining high-level planning and low-level tracking, is not new.
+	%Yet most of the existing works use the hierarchical approach for controller synthesis for a single robot \cite{herbert2017fastrack, fan2020fast, fan2018controller, wongpiromsarn2012receding, tedrake2010lqr, singh2018robust, DBLP:journals/tac/MeyerD19, DBLP:journals/corr/abs-1911-09773, Yang2017milp}.
+	%In contrast, we consider a hierarchical control for decentralized control of a group of robots.
 %	For example, there are methods which can generate nominal controlled trajectories by taking into account the maximum tracking error, assuming that a tracking controller is already in place \cite{fan2020fast, fan2018controller}.
 %	On the other hand, there are methods which compute a tracking controller which minimizes the tracking error for any given nominal trajectory:
 %	Some of them do not consider external disturbances \cite{tedrake2010lqr, singh2018robust}, some of them only consider linear dynamics \cite{wongpiromsarn2012receding}, and all of them consider only a single monolithic system structure \cite{herbert2017fastrack}.
@@ -27,7 +30,7 @@ We categorize the related work into (1) the ones which propose hierarchical cont
 	They use optimal control to compute a nominal controller for the product system, whose goal is to ensure some safety constraints together with ensuring optimality in some respect (like fuel consumption).
 	After that, they use control barrier functions for each robot for tracking the obtained nominal solution.
 	Even though they consider external noise in the system, yet, when there is noise, their controllers can occasionally violate the safety constraints for finite number of time steps.
-	Moreover, they only consider only simple linear systems (double integrators) as vehicle models.
+	Moreover, they only consider simple linear systems (double integrators) as vehicle models.
 	In contrast, our method provides guarantee against worst-case system noise at all time, and in addition can support nonlinear systems. 
 \end{enumerate}
  
